--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,18 @@ services:
         networks:
             - import
 
+    redis:
+        container_name: import-redis
+        image: redis
+        ports:
+            - "6379:6379"
+        volumes:
+            - ./docker-volumes/redis:/data
+        entrypoint: redis-server --appendonly yes
+        restart: always
+        networks:
+            - import
+
     nginx:
         image: nginx:alpine
         container_name: import-nginx
